\name{NEWS}
\title{News for package \pkg{BgeeCall}}

\section{Version 1.0.0 (2019-02)}{
  \itemize{
    \item Public release of BgeeCall package. Enjoy!!!
  }
}
\section{Version 1.1.0 (2019-08)}{
  \itemize{
    \item Change kmer size of kallisto index from 21 to 15 for libraries with readLength <= 50bp
    \item Can choose the output directory
    \item By default use a simpler arborescence for the output directory
    \item Can use reference intergenic sequences generated by the community
    \item Can use custom reference intergenic sequences from a local fastq file
  }
}
\section{Version 1.1.1 (2019-10)}{
  \itemize{
    \item Better manage transcript version
    \item Manage output directory when calls are generated for several libraries
    \item Manage transcript version when calls are generated for several libraries
  }
}
\section{Version 1.2.0 (2019-12)}{
  \itemize{
    \item Moved from workflow to software section
  }
}
\section{Version 1.4.0 (2020-04)}{
  \itemize{
    \item add verbose slot in UserMetadata
    \item add slots allowing not to rerun steps of the workflow. Do not rerun by default
    \item update documentation
    \item new functionalties when running BgeeCall from list of libraries
  }
}